@@ -7,15 +7,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 public class TerminatedShopsFilter implements ShopsFilter {
 
 	public void filterShops(final MiraklShops shops) {
-		final List<MiraklShop> validShops = shops.getShops().stream().filter(this::isNotShopStatusTerminated)
-				.collect(Collectors.toList());
+		final List<MiraklShop> validShops = shops.getShops().stream().filter(this::isNotShopStatusTerminated).toList();
 
 		shops.setShops(validShops);
 		shops.setTotalCount((long) validShops.size());
