@@ -1,60 +1,61 @@
 package com.paypal.infrastructure.support.countries;
 
-import com.paypal.infrastructure.support.countries.CountriesUtil;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-
+import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.stream.Stream;
 
+@ExtendWith(MockitoExtension.class)
 class CountriesUtilTest {
 
 	/**
-	 * When isocode is null Then is returned an empty.
+	 * When isoCode is null Then is returned an empty.
 	 */
 	@Test
-	void whenIsocodeIsNull_ThenIsReturnedAnEmptyOptional() {
-		final String isocode = null;
-		final Optional<Locale> result = CountriesUtil.getLocaleByIsocode(isocode);
+	void whenIsoCodeIsNull_ThenIsReturnedAnEmptyOptional() {
+		final String isoCode = null;
+		final Optional<Locale> result = CountriesUtil.getLocaleByIsoCode(isoCode);
 		Assertions.assertTrue(result.isEmpty());
 	}
 
 	/**
-	 * When isocode not exists Then is returned an empty.
+	 * When isoCode not exists Then is returned an empty.
 	 */
 	@Test
-	void whenIsocodeNotExists_ThenIsReturnedAnEmptyOptional() {
-		final String isocode = "not_exist";
-		final Optional<Locale> result = CountriesUtil.getLocaleByIsocode(isocode);
+	void whenIsoCodeNotExists_ThenIsReturnedAnEmptyOptional() {
+		final String isoCode = "not_exist";
+		final Optional<Locale> result = CountriesUtil.getLocaleByIsoCode(isoCode);
 		Assertions.assertTrue(result.isEmpty());
 	}
 
 	/**
-	 * When uppercase isocode with two characters exists Then is returned the correct
+	 * When uppercase isoCode with two characters exists Then is returned the correct
 	 * locale
 	 */
 	@Test
-	void whenIsocodeExists_ThenIsReturnedHisLocale() {
-		final String isocode = "GB";
-		final Locale expected = new Locale("", isocode);
-		final Optional<Locale> result = CountriesUtil.getLocaleByIsocode(isocode);
-		Assertions.assertEquals(expected, result.get());
+	void whenIsoCodeExists_ThenIsReturnedHisLocale() {
+		final String isoCode = "GB";
+		final Locale expected = Locale.of("", isoCode);
+		final Optional<Locale> result = CountriesUtil.getLocaleByIsoCode(isoCode);
+		Assertions.assertEquals(expected, result.orElse(null));
 	}
 
 	@ParameterizedTest
 	@MethodSource
-	void getLocaleByIsocode_shouldIgnoreCase(final String isocode, final Locale expectedLocale) {
-		final Optional<Locale> result = CountriesUtil.getLocaleByIsocode(isocode);
-		Assertions.assertEquals(expectedLocale, result.get());
+	void getLocaleByIsoCode_shouldIgnoreCase(final String isoCode, final Locale expectedLocale) {
+		final Optional<Locale> result = CountriesUtil.getLocaleByIsoCode(isoCode);
+		Assertions.assertEquals(expectedLocale, result.orElse(null));
 	}
 
-	private static Stream<Arguments> getLocaleByIsocode_shouldIgnoreCase() {
+	private static Stream<Arguments> getLocaleByIsoCode_shouldIgnoreCase() {
 		//@formatter:off
-		final Locale expectedLocale = new Locale("", "GB");
+		final Locale expectedLocale = Locale.of("", "GB");
 		return Stream.of(
 				Arguments.of("Gbr", expectedLocale),
 				Arguments.of("gbr", expectedLocale),
