@@ -1,19 +1,17 @@
 package com.paypal.invoices.extractioncommons.services;
 
-import com.mirakl.client.mmp.domain.accounting.document.MiraklAccountingDocumentPaymentStatus;
-import com.mirakl.client.mmp.domain.accounting.document.MiraklAccountingDocumentType;
-import com.mirakl.client.mmp.domain.invoice.MiraklInvoice;
-import com.mirakl.client.mmp.domain.invoice.MiraklInvoices;
+import com.mirakl.client.mmp.domain.payment.sellerbillingcycle.MiraklPayOutState;
+import com.mirakl.client.mmp.domain.payment.sellerbillingcycle.MiraklSellerBillingCycle;
+import com.mirakl.client.mmp.domain.payment.sellerbillingcycle.MiraklSellerBillingCycleSeekSort;
+import com.mirakl.client.mmp.domain.payment.sellerbillingcycle.MiraklSellerBillingCycles;
 import com.mirakl.client.mmp.domain.shop.MiraklShop;
-import com.mirakl.client.mmp.operator.request.payment.invoice.MiraklGetInvoicesRequest;
-import com.mirakl.client.mmp.request.payment.invoice.MiraklAccountingDocumentState;
+import com.mirakl.client.mmp.operator.request.payment.sellerbillingcycle.MiraklGetSellerBillingCyclesRequest;
 import com.paypal.infrastructure.mail.services.MailNotificationUtil;
 import com.paypal.infrastructure.mirakl.client.MiraklClient;
 import com.paypal.infrastructure.support.converter.Converter;
 import com.paypal.invoices.extractioncommons.model.AccountingDocumentModel;
 import com.paypal.invoices.extractioncommons.model.InvoiceTypeEnum;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.EnumUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
@@ -22,9 +20,9 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.paypal.infrastructure.hyperwallet.constants.HyperWalletConstants.MIRAKL_MAX_RESULTS_PER_PAGE;
 
@@ -62,74 +60,68 @@ public abstract class AbstractAccountingDocumentsExtractServiceImpl<T extends Ac
 
 	@Override
 	public List<T> extractAccountingDocuments(final Date delta, final boolean includePaid) {
-		final List<MiraklInvoice> invoices = getInvoicesForDateAndType(delta, getInvoiceType(), includePaid);
+		final List<MiraklSellerBillingCycle> billingCycles = getBillingCyclesForDateAndType(delta, includePaid);
 
 		//@formatter:off
-		return invoices.stream()
-				.map(getMiraklInvoiceToAccountingModelConverter()::convert)
-				.collect(Collectors.toList());
-		//@formatter:on
+		return billingCycles.stream()
+			.map(getMiraklInvoiceToAccountingModelConverter()::convert)
+			.toList();
+        //@formatter:on
 	}
 
 	@NonNull
-	protected MiraklGetInvoicesRequest createAccountingDocumentRequest(final Date delta,
-			final InvoiceTypeEnum invoiceType) {
-		return createAccountingDocumentRequest(delta, invoiceType, false);
+	protected MiraklGetSellerBillingCyclesRequest createAccountingDocumentRequest(final Date delta) {
+		return createAccountingDocumentRequest(delta, false);
 	}
 
 	@NonNull
-	protected MiraklGetInvoicesRequest createAccountingDocumentRequest(final Date delta,
-			final InvoiceTypeEnum invoiceType, final boolean includePaid) {
-		final MiraklGetInvoicesRequest miraklGetInvoicesRequest = new MiraklGetInvoicesRequest();
-		miraklGetInvoicesRequest.setStartDate(delta);
+	protected MiraklGetSellerBillingCyclesRequest createAccountingDocumentRequest(final Date delta,
+			final boolean includePaid) {
+		final MiraklGetSellerBillingCyclesRequest request = new MiraklGetSellerBillingCyclesRequest();
+		request.setStartDate(delta.toInstant());
 		if (!includePaid) {
-			miraklGetInvoicesRequest.setPaymentStatus(MiraklAccountingDocumentPaymentStatus.PENDING);
+			request.setPayOutStates(Collections.singleton(MiraklPayOutState.TO_PAY));
 		}
-		miraklGetInvoicesRequest.addState(MiraklAccountingDocumentState.COMPLETE);
-		miraklGetInvoicesRequest.setType(EnumUtils.getEnum(MiraklAccountingDocumentType.class, invoiceType.name()));
-		miraklGetInvoicesRequest.setMax(MIRAKL_MAX_RESULTS_PER_PAGE);
+		request.setLimit(MIRAKL_MAX_RESULTS_PER_PAGE);
+		request.setOrderBy(MiraklSellerBillingCycleSeekSort.DATE_CREATED.asc());
 
-		return miraklGetInvoicesRequest;
+		return request;
 	}
 
-	protected List<MiraklInvoice> getInvoicesForDateAndType(final Date delta, final InvoiceTypeEnum invoiceType) {
-		return getInvoicesForDateAndType(delta, invoiceType, false);
+	protected List<MiraklSellerBillingCycle> getBillingCyclesForDateAndType(final Date delta) {
+		return getBillingCyclesForDateAndType(delta, false);
 	}
 
-	protected List<MiraklInvoice> getInvoicesForDateAndType(final Date delta, final InvoiceTypeEnum invoiceType,
+	protected List<MiraklSellerBillingCycle> getBillingCyclesForDateAndType(final Date delta,
 			final boolean includePaid) {
 
-		final List<MiraklInvoice> invoices = new ArrayList<>();
+		final List<MiraklSellerBillingCycle> billingCycles = new ArrayList<>();
 
-		int offset = 0;
-		final MiraklGetInvoicesRequest accountingDocumentRequest = createAccountingDocumentRequest(delta, invoiceType,
-				includePaid);
-		while (true) {
-			accountingDocumentRequest.setOffset(offset);
-			final MiraklInvoices receivedInvoices = miraklMarketplacePlatformOperatorApiClient
-					.getInvoices(accountingDocumentRequest);
-			invoices.addAll(receivedInvoices.getInvoices());
-
-			if (receivedInvoices.getTotalCount() <= invoices.size()) {
-				break;
-			}
-			offset += MIRAKL_MAX_RESULTS_PER_PAGE;
+		final MiraklGetSellerBillingCyclesRequest request = createAccountingDocumentRequest(delta, includePaid);
+		String pageToken = null;
+		do {
+			request.setPageToken(pageToken);
+			final MiraklSellerBillingCycles received = miraklMarketplacePlatformOperatorApiClient
+				.getSellerBillingCycles(request);
+			billingCycles.addAll(received.getData());
+			pageToken = received.getNextPageToken();
 		}
+		while (pageToken != null);
 
-		return invoices;
+		return billingCycles;
 	}
 
 	@Override
 	public Collection<T> extractAccountingDocuments(final List<String> ids) {
-		final List<MiraklInvoice> invoices = getInvoicesForDateAndType(getTimeRangeForFindByIdInvoices(),
-				getInvoiceType());
+		final List<MiraklSellerBillingCycle> billingCycles = getBillingCyclesForDateAndType(
+				getTimeRangeForFindByIdInvoices());
 
 		//@formatter:off
-		return invoices.stream()
-				.filter(invoice -> ids.contains(invoice.getId()))
-				.map(getMiraklInvoiceToAccountingModelConverter()::convert)
-				.collect(Collectors.toList());
-		//@formatter:on
+		return billingCycles.stream()
+			.filter(billingCycle -> ids.contains(billingCycle.getId().toString()))
+			.map(getMiraklInvoiceToAccountingModelConverter()::convert)
+			.toList();
+        //@formatter:on
 	}
 
 	private Date getTimeRangeForFindByIdInvoices() {
@@ -138,6 +130,6 @@ public abstract class AbstractAccountingDocumentsExtractServiceImpl<T extends Ac
 
 	protected abstract InvoiceTypeEnum getInvoiceType();
 
-	protected abstract Converter<MiraklInvoice, T> getMiraklInvoiceToAccountingModelConverter();
+	protected abstract Converter<MiraklSellerBillingCycle, T> getMiraklInvoiceToAccountingModelConverter();
 
 }
