@@ -1,5 +1,12 @@
 package com.paypal.kyc.incomingnotifications.services.flags;
 
+import static com.paypal.kyc.documentextractioncommons.model.KYCConstants.HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.catchThrowable;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.verify;
+
 import com.callibrity.logging.test.LogTracker;
 import com.callibrity.logging.test.LogTrackerStub;
 import com.hyperwallet.clientsdk.model.HyperwalletUser;
@@ -18,15 +25,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-
 import java.util.List;
-
-import static com.paypal.kyc.documentextractioncommons.model.KYCConstants.HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.catchThrowable;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class AbstractUserDocumentFlagsStrategyTest {
@@ -38,7 +37,8 @@ class AbstractUserDocumentFlagsStrategyTest {
 	private static final String EMAIL_BODY_PREFIX = "There was an error, please check the logs for further information:\n";
 
 	private static final LogTrackerStub LOG_TRACKER_STUB = LogTrackerStub.create()
-			.recordForLevel(LogTracker.LogLevel.ERROR).recordForType(AbstractUserDocumentFlagsStrategy.class);
+		.recordForLevel(LogTracker.LogLevel.ERROR)
+		.recordForType(AbstractUserDocumentFlagsStrategy.class);
 
 	private MyAbstractUserDocumentFlagsStrategy testObj;
 
@@ -76,24 +76,21 @@ class AbstractUserDocumentFlagsStrategyTest {
 		testObj.fillMiraklProofIdentityOrBusinessFlagStatus(kycUserDocumentFlagsNotificationBodyModel);
 
 		verify(miraklMarketplacePlatformOperatorApiClientMock)
-				.updateShops(miraklUpdateShopsRequestArgumentCaptor.capture());
+			.updateShops(miraklUpdateShopsRequestArgumentCaptor.capture());
 
 		final MiraklUpdateShopsRequest updateShopRequest = miraklUpdateShopsRequestArgumentCaptor.getValue();
 
-		final MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue additionalValue = new MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue(
-				HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD, "true");
-
 		assertThat(updateShopRequest.getShops()).hasSize(1);
-		final MiraklUpdateShop shop = updateShopRequest.getShops().get(0);
+		final MiraklUpdateShop shop = updateShopRequest.getShops().getFirst();
 		assertThat(shop.getShopId()).isEqualTo(Long.valueOf(SHOP_ID));
 		final List<MiraklRequestAdditionalFieldValue> additionalFieldValues = shop.getAdditionalFieldValues();
 		assertThat(additionalFieldValues).hasSize(1);
 		final MiraklRequestAdditionalFieldValue additionalFieldValue = additionalFieldValues.get(0);
 		assertThat(additionalFieldValue.getCode()).isEqualTo(HYPERWALLET_KYC_REQUIRED_PROOF_IDENTITY_BUSINESS_FIELD);
 		assertThat(additionalFieldValue)
-				.isInstanceOf(MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue.class);
+			.isInstanceOf(MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue.class);
 		assertThat(((MiraklRequestAdditionalFieldValue.MiraklSimpleRequestAdditionalFieldValue) additionalFieldValue)
-				.getValue()).isEqualTo(Boolean.TRUE.toString());
+			.getValue()).isEqualTo(Boolean.TRUE.toString());
 	}
 
 	@Test
@@ -107,7 +104,7 @@ class AbstractUserDocumentFlagsStrategyTest {
 		//@formatter:on
 		final MiraklException miraklException = new MiraklException("Something bad happened");
 		doThrow(miraklException).when(miraklMarketplacePlatformOperatorApiClientMock)
-				.updateShops(any(MiraklUpdateShopsRequest.class));
+			.updateShops(any(MiraklUpdateShopsRequest.class));
 
 		final Throwable throwable = catchThrowable(
 				() -> testObj.fillMiraklProofIdentityOrBusinessFlagStatus(kycUserDocumentFlagsNotificationBodyModel));
@@ -116,7 +113,7 @@ class AbstractUserDocumentFlagsStrategyTest {
 
 		verify(mailNotificationMock).sendPlainTextEmail("Issue detected updating KYC information in Mirakl",
 				(EMAIL_BODY_PREFIX + "Something went wrong updating KYC information of shop [%s]%n%s")
-						.formatted(SHOP_ID, MiraklLoggingErrorsUtil.stringify(miraklException)));
+					.formatted(SHOP_ID, MiraklLoggingErrorsUtil.stringify(miraklException)));
 	}
 
 	private static class MyAbstractUserDocumentFlagsStrategy extends AbstractUserDocumentFlagsStrategy {
