@@ -1,8 +1,8 @@
 package com.paypal.sellers.individualsellersextraction.batchjobs;
 
-import com.paypal.jobsystem.batchjobsupport.support.AbstractDynamicWindowDeltaBatchJobItemsExtractor;
 import com.paypal.jobsystem.batchjob.model.BatchJobContext;
 import com.paypal.jobsystem.batchjobaudit.services.BatchJobTrackingService;
+import com.paypal.jobsystem.batchjobsupport.support.AbstractDynamicWindowDeltaBatchJobItemsExtractor;
 import com.paypal.sellers.sellerextractioncommons.model.SellerModel;
 import com.paypal.sellers.sellerextractioncommons.services.MiraklSellersExtractService;
 import org.springframework.stereotype.Component;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The extractor class for retrieving all the sellers within a delta time from mirakl
@@ -36,7 +35,7 @@ public class IndividualSellersExtractBatchJobItemsExtractor
 	@Override
 	protected Collection<IndividualSellersExtractJobItem> getItems(final BatchJobContext ctx, final Date delta) {
 		final List<SellerModel> miraklIndividualSellers = miraklSellersExtractService.extractIndividuals(delta);
-		return miraklIndividualSellers.stream().map(IndividualSellersExtractJobItem::new).collect(Collectors.toList());
+		return miraklIndividualSellers.stream().map(IndividualSellersExtractJobItem::new).toList();
 	}
 
 }
